fixes tiles overflowing on mobile by constraining grid to one column at 100%

--- a/theme/assets/css/main.scss
+++ b/theme/assets/css/main.scss
@@ -356,6 +356,9 @@ html {
     opacity: 0;
     transition: all 0.3s;
   }
+  .portfolio-tile-container {
+    grid-template-columns: 100%;
+  }
   .btn-toggle-menu {
     display: block;
   }
